[package]
name = "leetcode_rs"
version = "0.1.0"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = { path = "automod" }
clap = { version = "4.3.19", features = ["derive"] }
regex = "1.9.1"
plugin = { path = "plugin" }
tokio = { version = "1.29.1", features = ["full"] }
